<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright 2018 the original author or authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.appulse.encon</groupId>
  <artifactId>encon-parent</artifactId>
  <version>2.0.0</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>

    <java.version>11</java.version>

    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <maven.compiler.testTarget>${java.version}</maven.compiler.testTarget>
    <maven.compiler.testSource>${java.version}</maven.compiler.testSource>
  </properties>

  <modules>
    <module>encon-common</module>
    <module>encon-terms</module>
    <module>encon-config</module>
    <module>encon-databind</module>
    <module>encon</module>
    <module>encon-handler</module>
    <module>encon-spring</module>
    <module>examples</module>
    <module>benchmark</module>
  </modules>

  <name>encon</name>
  <description>
    Java based Erlang Node Connector
  </description>
  <url>https://github.com/appulse-projects/encon-java</url>
  <inceptionYear>2018</inceptionYear>

  <organization>
    <name>Appulse</name>
    <url>https://github.com/appulse-projects</url>
  </organization>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/appulse-projects/encon-java</url>
    <connection>scm:git:https://github.com/appulse-projects/encon-java.git</connection>
    <developerConnection>scm:git:https://github.com/appulse-projects/encon-java.git</developerConnection>
    <tag>2.0.0</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/appulse-projects/encon-java/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Travis</system>
    <url>https://travis-ci.org/appulse-projects/encon-java</url>
  </ciManagement>

  <developers>
    <developer>
      <id>xxlabaza</id>
      <name>Artem Labazin</name>
      <email>xxlabaza@gmail.com</email>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.4</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
      <version>3.1.9</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.3.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.11.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.23.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>2.23.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.appulse</groupId>
        <artifactId>logging-java</artifactId>
        <version>1.1.0</version>
      </dependency>
      <dependency>
        <groupId>io.appulse</groupId>
        <artifactId>utils-java</artifactId>
        <version>1.10.0</version>
      </dependency>
      <dependency>
        <groupId>io.appulse.epmd.java</groupId>
        <artifactId>client</artifactId>
        <version>1.0.2</version>
      </dependency>
      <dependency>
        <groupId>io.appulse.epmd.java</groupId>
        <artifactId>core</artifactId>
        <version>1.0.2</version>
      </dependency>
      <dependency>
        <groupId>io.appulse.epmd.java</groupId>
        <artifactId>server</artifactId>
        <version>1.0.2</version>
      </dependency>

      <dependency>
        <groupId>org.erlang.otp</groupId>
        <artifactId>jinterface</artifactId>
        <version>1.6.1</version>
      </dependency>

      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-buffer</artifactId>
        <version>4.1.32.Final</version>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-handler</artifactId>
        <version>4.1.32.Final</version>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-transport-native-epoll</artifactId>
        <version>4.1.32.Final</version>
        <classifier>linux-x86_64</classifier>
        <exclusions>
          <exclusion>
            <groupId>io.netty</groupId>
            <artifactId>netty-common</artifactId>
          </exclusion>
          <exclusion>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
          </exclusion>
          <exclusion>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-core</artifactId>
        <version>1.21</version>
      </dependency>

      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-generator-annprocess</artifactId>
        <version>1.21</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>3.1.8</version>
          <configuration>
            <effort>Max</effort>
            <threshold>Low</threshold>
            <xmlOutput>false</xmlOutput>
            <excludeFilterFile>${project.basedir}/../.codestyle/findbugs.xml</excludeFilterFile>
          </configuration>
          <executions>
            <execution>
              <id>spotbugs-validation</id>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
            <targetJdk>${maven.compiler.source}</targetJdk>
            <failOnViolation>true</failOnViolation>
            <printFailingErrors>true</printFailingErrors>
            <analysisCache>true</analysisCache>
            <linkXRef>false</linkXRef>
            <rulesets>
              <ruleset>${project.basedir}/../.codestyle/pmd.xml</ruleset>
            </rulesets>
          </configuration>
          <executions>
            <execution>
              <id>pmd-validation</id>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.0.0</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>8.15</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>checkstyle-validation</id>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
              <configuration>
                <configLocation>${project.basedir}/../.codestyle/checkstyle.xml</configLocation>
                <consoleOutput>true</consoleOutput>
                <failsOnError>true</failsOnError>
                <failOnViolation>true</failOnViolation>
                <linkXRef>false</linkXRef>
                <propertyExpansion>codestyleFolder=${project.basedir}/../.codestyle</propertyExpansion>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <additionalOptions>-Xdoclint:none</additionalOptions>
            <additionalparam>-Xdoclint:none</additionalparam>
            <breakiterator>true</breakiterator>
            <charset>UTF-8</charset>
            <docencoding>UTF-8</docencoding>
            <encoding>UTF-8</encoding>
            <failOnError>true</failOnError>
            <show>protected</show>
            <source>${java.version}</source>
            <version>true</version>
          </configuration>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
          <configuration>
            <skip>true</skip>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.8</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>ossrh</serverId>
            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.6</version>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <phase>install</phase>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>${java.version}</release>
          <compilerVersion>${maven.compiler.target}</compilerVersion>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>2.2.5</version>
        <executions>
          <execution>
            <id>git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <runOnlyOnce>true</runOnlyOnce>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <verbose>false</verbose>
          <prefix>git</prefix>
          <generateGitPropertiesFilename>
            ${project.build.outputDirectory}/git.properties
          </generateGitPropertiesFilename>
          <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
          <excludeProperties>
            <excludeProperty>git.closest.tag.commit.count</excludeProperty>
            <excludeProperty>git.closest.tag.name</excludeProperty>
          </excludeProperties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
          <trimStackTrace>false</trimStackTrace>
          <includes>
            <include>**/*Test.java</include>
            <include>**/*Tests.java</include>
            <include>**/Test*.java</include>
          </includes>
          <excludes>
            <exclude>**/it/**</exclude>
            <exclude>**/*IntegrationTest.java</exclude>
            <exclude>**/*IntegrationTests.java</exclude>
            <exclude>**/*IT.java</exclude>
            <exclude>**/IT*.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
          <includes>
            <include>**/*IntegrationTest.java</include>
            <include>**/*IntegrationTests.java</include>
            <include>**/*IT.java</include>
            <include>**/IT*.java</include>
            <include>**/it/**/*Test.java</include>
            <include>**/it/**/*Tests.java</include>
            <include>**/it/**/Test*.java</include>
          </includes>
        </configuration>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <inherited>false</inherited>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <inherited>false</inherited>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <inherited>false</inherited>
      </plugin>
    </plugins>
  </build>
</project>
